Added a build option for java9